# soju-rust

./: .env  .gitignore  Cargo.toml  ERROR_SOLVING.md  NOTES.md  README.MD  configuration.yaml
migrations/: 20220731103140_create_subscriptions_table.sql
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
